--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -7,35 +7,10 @@
 
     <fragment
         android:id="@+id/movieListFragment"
-        tools:layout="@layout/fragment_movie_list"
-        android:name="com.xee.app.activejob.movie.fragment.MovieListFragment"
+        tools:layout="@layout/fragment_people"
+        android:name="com.xee.app.activejob.ui.fragment.NearByPersonListFragment"
         android:label="MovieListFragment" >
 
-        <action
-            app:popEnterAnim="@anim/slide_in_left_new"
-            app:popExitAnim="@anim/slide_out_right_new"
-            app:enterAnim="@anim/slide_in_right_new"
-            app:exitAnim="@anim/slide_out_left_new"
-            android:id="@+id/action_movieListFragment_to_movieDetailFragment"
-            app:destination="@id/movieDetailFragment">
-            <argument
-                android:name="movie"
-                app:argType="com.xee.app.activejob.model.Search"/>
-            <argument
-                android:name="action"
-                app:argType="string"/>
-        </action>
     </fragment>
-    <fragment
-        android:id="@+id/movieDetailFragment"
-        tools:layout="@layout/fragment_movie_detail"
-        android:name="com.xee.app.activejob.movie.fragment.MovieDetailFragment"
-        android:label="MovieDetailFragment" >
-        <argument
-            android:name="movie"
-            app:argType="com.xee.app.activejob.model.Search"/>
-        <argument
-            android:name="action"
-            app:argType="string"/>
-    </fragment>
+
 </navigation>
